# cosmic-snake

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/cosmic_snake/: __init__.py  __main__.py
