[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-snake"
version = "0.0.1"
requires-python = ">=3.10,<3.11"

# ── this is important for the “src/” layout ──
[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
exclude = ["dist", ".venv"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
